feat:sheet4 completed

--- a/javascript_day4/Logic.html
+++ b/javascript_day4/Logic.html
@@ -12,6 +12,31 @@
     <br>
     <button onclick="rangeoddeven()">Odd Even</button>
     <button onclick="ArmStrong()">ArmStrong</button>
+    <button onclick="Prime()">Prime</button>
+    <button onclick="Factorial()"> Without recursion Factorial</button>
+    <button onclick="Fibonacci()">Fibonacci</button>
+    <button onclick="Pallindrome()">Pallindrome</button>
+    <button onclick="cbrt()">Cube</button>
+    <button onclick="duplicate()">duplicate</button>
+    <button onclick="sum()">Sum</button>
+    <button onclick="Swap()">Swap</button>
+    <button onclick="SwapWithoutThird()">Swap Without Third </button>
+    <button onclick="vowel()">Vowel</button>
+    <button onclick="checkword()">Check word</button>
+    <button onclick="Diamond(5)">Diamond</button>
+    
+    
+
+
+
+
+
+
+
+
+
+
+
 <br>
 <br>
 
