completed sheet 5 array manupilation

--- a/Sheet_5/index.html
+++ b/Sheet_5/index.html
@@ -103,8 +103,8 @@
                         </path>
                     </g>
                 </svg>
-                <input placeholder="Search" type="search" class="input" id="search">
-                <button class="searchbtn" onclick="search()"><i class="fa fa-search"></i></button>
+                <input placeholder="Search" type="search" class="input" id="search" oninput="search()">
+                <!-- <button class="searchbtn" onclick="search()"><i class="fa fa-search"></i></button> -->
 
             </div>
             
