--- a/Sheet6/localstoreage.html
+++ b/Sheet6/localstoreage.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="sheet6.js"></script>
-    <link rel="stylesheet" href="sheet6.css">
+    <script src="localstorage.js"></script>
+    <link rel="stylesheet" href="localstorage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
